sfdx-source/main/default/objects/VCC_Readiness_Activity__c/fields/VCC_IsMyVISN_Readiness__c.field-meta.xml
<CustomField>
    <fullName>VCC_IsMyVISN_Readiness__c</fullName>
    <formula>IF(VCC_VISN__c = $User.Division, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsMyVISN?</label>
    <type>Checkbox</type>
</CustomField>