sfdx-source/main/default/objects/VCC_Readiness_Activity__c/fields/VCC_Onboarding_Activity__c.field-meta.xml
<CustomField>
    <fullName>VCC_Onboarding_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Connecting the Readiness Activity to the Onboarding Activity for which the Readiness Activity is being created.</description>
    <label>Onboarding Activity</label>
    <referenceTo>VCC_Onboarding_Activity__c</referenceTo>
    <relationshipLabel>Readiness Activities</relationshipLabel>
    <relationshipName>Readiness_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>