sfdx-source/main/default/objects/VCC_Readiness_Activity__c/fields/VCC_SOT_User__c.field-meta.xml
<CustomField>
    <fullName>VCC_SOT_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup field connecting the Readiness Activity to the SOT User for which the Readiness Activity is created.</description>
    <label>SOT User</label>
    <referenceTo>VCC_SOT_User__c</referenceTo>
    <relationshipLabel>Readiness Activities</relationshipLabel>
    <relationshipName>Readiness_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>