sfdx-source/main/default/objects/VCC_Readiness_Activity__c/fields/VCC_VISN__c.field-meta.xml
<CustomField>
    <fullName>VCC_VISN__c</fullName>
    <description
    >The flow VCC_Set_Service_Field_on_Readiness_Activity completes this field, so the Users can filter by Service and VISN on the List View and the Dashboards for the SOT
        app.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>VISN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>